# dent_bot

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/dent_bot/: __init__.py  base_config.py  config.py  exceptions.py  llm.py  main.py  prompts.py  tools.py
src/dent_bot/adapters/: __init__.py  base.py  sqlite_adapter.py
src/dent_bot/channels/: dentist_panel.py  telegram.py
src/dent_bot/models/: appointment.py  dentist.py  treatment.py
src/dent_bot/services/: __init__.py  approval_service.py  notification_service.py  slot_service.py
src/dent_bot/tools/: __init__.py  appointment_tools.py  slot_tools.py
src/dentbot/: base_config.py  config.py  llm.py  main.py
src/dentbot/adapters/: base.py  sqlite_adapter.py
src/dentbot/channels/: __init__.py  dentist_panel.py  telegram.py
src/dentbot/models/: __init__.py  appointment.py  dentist.py
src/dentbot/services/: approval_service.py  notification_service.py  slot_service.py
src/dentbot/tools/: __init__.py  appointment_tools.py  dentist_tools.py  slot_tools.py  treatment_tools.py
tests/: conftest.py  test_llm.py  test_sqlite_adapter.py  test_tools.py
