[project]
name = "dentbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.11.0",
    "email-validator>=2.3.0",
    "fastapi>=0.123.4",
    "flake8>=7.3.0",
    "google-api-python-client>=2.187.0",
    "httpx>=0.28.1",
    "langchain-core>=1.1.0",
    "langchain-groq>=1.1.0",
    "loguru>=0.7.3",
    "mypy>=1.19.0",
    "pandas>=2.3.3",
    "phonenumbers>=9.0.19",
    "pydantic>=2.12.5",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-telegram-bot>=22.5",
    "pytz>=2025.2",
    "redis>=7.1.0",
    "twilio>=9.8.7",
]
